add feedback form

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,15 @@
     <script defer src="/build/bundle.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <div
+      data-tf-sidetab="sMxhtk4t"
+      data-tf-width="320"
+      data-tf-height="400"
+      data-tf-button-color="#005CB2"
+      data-tf-button-text="Share feedback"
+      style="all: unset"
+    ></div>
+    <script src="//embed.typeform.com/next/embed.js"></script>
+  </body>
 </html>
