change feedback form to chat

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,10 @@
 
   <body>
     <div
-      data-tf-sidetab="sMxhtk4t"
-      data-tf-width="320"
-      data-tf-height="400"
+      data-tf-popover="sMxhtk4t"
       data-tf-button-color="#005CB2"
-      data-tf-button-text="Share feedback"
+      data-tf-tooltip="Share your feedback!"
+      data-tf-chat
       style="all: unset"
     ></div>
     <script src="//embed.typeform.com/next/embed.js"></script>
